# charli3-push-oracle-node

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SUPPORT.md  alembic.ini  backend.py  config.ini  config.ini.example  config.yml.example  docker-compose.yml  entrypoint.sh  example-config.yml  example-dynamic-config.yml  flake.nix  kinesisdirehosedeliverystreamhandler.py  main.py  migrations.py  pyproject.toml  pytest.ini  req.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker_push_ecr.yml  pre-commit.yml  pylint.yml  python-app.yml
alembic/: env.py
alembic/versions/: 7f3f195135b1_updated_to_decimal.py  c42ba44f6aeb_initial_migration.py  cdcc2afa5485_updated_rate_field.py
backend/: __init__.py  app_setup.py  charli3.txt  node_checker.py  runner.py
backend/api/: __init__.py  aggregated_coin_rate.py  api.py  chainquery.py  coinrate.py  datums.py  kupo.py  node.py  node_sync_api.py  oraclechecks.py
backend/api/providers/: __init__.py  api.py  base_adapter.py  binance.py  ccxt_adapter.py  charli3_api.py  charli3_dendrite_adapter.py  coingecko.py  coinrate.py  datums.py  generic.py  generic_api_adapter.py  inverse_rate.py  lp_token_adapter.py  minswap.py  muesliswap.py  sundaeswap.py  vyfi.py  wingriders.py
backend/core/: __init__.py  aggregate_conditions.py  consensus.py  datums.py  oracle.py  redeemers.py
backend/db/: database.py  no_op_session.py  service.py
backend/db/crud/: __init__.py  aggregated_rate_details_crud.py  base_crud.py  feed_crud.py  jobs_crud.py  node_aggregation_participation_crud.py  node_aggregations_crud.py  node_updates_crud.py  nodes_crud.py  operational_errors_crud.py  providers_crud.py  rate_dataflow_crud.py  reward_distribution_crud.py  transactions_crud.py
backend/db/models/: __init__.py  aggregated_rate_detail.py  base.py  feed.py  jobs.py  node_aggregation_participation.py  node_aggregations.py  node_updates.py  nodes.py  operational_errors.py  provider.py  rate_data_flow.py  reward_distributions.py  transactions.py
backend/logfiles/: KinesisFirehose.py  __init__,py  logging_config.py
backend/utils/: alerts.py  config_utils.py  decrypt.py
backend/validators/: __init__.py  config_validator.py  health_validator.py  node_operation_validator.py
docs/: adapters_guide.md  alerts_config_guide.md  configuration_guide.md
test/: __init__.py  conftest.py  test_aggregate_conditions.py  test_api.py  test_chainquery.py  test_charli3_dendrite_adapter.py  test_coinrate.py  test_consensus.py  test_datums.py  test_generic_api_adapter.py  test_lp_token_adapter.py  test_node.py  test_oracle.py  test_precision_multiplier.py  test_runner.py
test/helper/: __init__.py  mocked_data.py  utxo_mocker.py
